# effects-benchmarks

./: .gitignore  README.md  cabal.project  effects-benchmarks.cabal  stack.yaml
instances/: FSStateful.hs  MTLStateful.hs  PStateful.hs
instances/ExtEff/: HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Freer/: HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Fused/: HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/MTL/: DeepHTTP.hs  HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Poly/: HTTP.hs  Stateful.hs  StatefulExcept.hs
instances/Shallow/: HTTP.hs  Stateful.hs  StatefulExcept.hs
src/: FreerSimple.hs  HigherOrder.hs  JVEffects.hs  MTL.hs  Main.hs
src/Bench/: Countdown.hs  HTTP.hs
src/Bench/Countdown/: StateExcept.hs
src/Bench/Signature/: HTTP.hsig  Stateful.hsig  StatefulExcept.hsig
