cabal-version:       2.2
name:                effects-benchmarks
version:             0.1.0.0
homepage:            https://github.com/patrickt/effects-benchmarks#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  build-depends:       base >= 4.7 && < 5

library benchmark-signatures
  import:              shared
  hs-source-dirs:      src
  signatures:          Bench.Signature.Stateful
                     , Bench.Signature.StatefulExcept
                     , Bench.Signature.HTTP
  exposed-modules:     Bench.Countdown
                     , Bench.HTTP

library instances-for-shallow
  import:          shared
  hs-source-dirs:  instances
  default-extensions: StrictData
  exposed-modules: Shallow.HTTP
                 , Shallow.Stateful
                 , Shallow.StatefulExcept

library instances-for-exteff
  import: shared
  hs-source-dirs:  instances
  exposed-modules: ExtEff.Stateful
                 , ExtEff.StatefulExcept
                 , ExtEff.HTTP
  build-depends:   extensible-effects ^>= 5.0.0.1

library instances-for-mtl
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: MTL.Stateful
                 , MTL.StatefulExcept
                 , MTL.HTTP
  build-depends:   mtl ^>= 2.2.2

library instances-for-fused-effects
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Fused.Stateful
                 , Fused.StatefulExcept
                 , Fused.HTTP
  build-depends:   fused-effects >= 0.3.1.0

library instances-for-freer-simple
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Freer.Stateful
                 , Freer.StatefulExcept
                 , Freer.HTTP
  build-depends:   freer-simple ^>= 1.2.1

library instances-for-polysemy
  import:          shared
  hs-source-dirs:  instances
  exposed-modules: Poly.Stateful
                 , Poly.StatefulExcept
                 , Poly.HTTP
  build-depends:   polysemy ^>= 0.1.2

benchmark effects-benchmarks
  import:         shared
  type:           exitcode-stdio-1.0
  hs-source-dirs: src
  build-depends:  benchmark-signatures
                , instances-for-mtl
                , instances-for-fused-effects
                , instances-for-freer-simple
                , instances-for-polysemy
                , instances-for-shallow
                , instances-for-exteff
                , dump-core
                , gauge
                , weigh
                , polysemy
  main-is:        Main.hs
  mixins:         benchmark-signatures (Bench.Countdown as MTL.Countdown, Bench.HTTP as MTL.HTTPM) requires (Bench.Signature.Stateful as MTL.Stateful, Bench.Signature.StatefulExcept as MTL.StatefulExcept, Bench.Signature.HTTP as MTL.HTTP)
                , benchmark-signatures (Bench.Countdown as Fused.Countdown, Bench.HTTP as Fused.HTTPM) requires (Bench.Signature.Stateful as Fused.Stateful, Bench.Signature.StatefulExcept as Fused.StatefulExcept, Bench.Signature.HTTP as Fused.HTTP)
                , benchmark-signatures (Bench.Countdown as Simple.Countdown, Bench.HTTP as Simple.HTTPM) requires (Bench.Signature.Stateful as Freer.Stateful, Bench.Signature.StatefulExcept as Freer.StatefulExcept, Bench.Signature.HTTP as Freer.HTTP)
                , benchmark-signatures (Bench.Countdown as Shallow.Countdown, Bench.HTTP as Shallow.HTTPM) requires (Bench.Signature.Stateful as Shallow.Stateful, Bench.Signature.StatefulExcept as Shallow.StatefulExcept, Bench.Signature.HTTP as Shallow.HTTP)
                , benchmark-signatures (Bench.Countdown as Poly.Countdown, Bench.HTTP as Poly.HTTPM) requires (Bench.Signature.Stateful as Poly.Stateful, Bench.Signature.StatefulExcept as Poly.StatefulExcept, Bench.Signature.HTTP as Poly.HTTP)
                , benchmark-signatures (Bench.Countdown as ExtEff.Countdown, Bench.HTTP as ExtEff.HTTPM) requires (Bench.Signature.Stateful as ExtEff.Stateful, Bench.Signature.StatefulExcept as ExtEff.StatefulExcept, Bench.Signature.HTTP as ExtEff.HTTP)
